# app/modules/user/models/userModel.js
@@ -1,6 +1,7 @@
 const mongoose = require("mongoose");
 const Schema = mongoose.Schema;
 var validator = require("validator");
+
 const userSchema = new Schema({
   fullName: {
     type: String,
@@ -10,7 +11,7 @@ const userSchema = new Schema({
     type: String,
     required: true,
     unique: true,
-    validate: [validator.isEmail, "email is not valid"],
+    validate: [validator.isEmail, "Email is not valid"],
   },
   gender: {
     type: String,
@@ -23,6 +24,15 @@ const userSchema = new Schema({
   password: {
     type: String,
     required: true,
+    validate: {
+      validator: function (value) {
+        return /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@$!%*?&]).{8,}$/.test(
+          value
+        );
+      },
+      message:
+        "Password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, one number, and one special character.",
+    },
   },
   resetPasswordCode: { type: String },
   resetPasswordExpires: { type: Date },
@@ -32,7 +42,8 @@ const userSchema = new Schema({
   },
   profilePicture: {
     type: String,
-    default: "../../../../uploads/defaultProfilePic",
+    default: "/uploads/defaultProfilePic",
   },
 });
+
 module.exports = mongoose.model("User", userSchema);
